--- a/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
+++ b/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
@@ -1,3 +1,17 @@
-<ion-content [fullscreen]="true">
-
-</ion-content>
+<ion-header>
+    <ion-toolbar>
+      <ion-title>Charlas</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+    <ion-list>
+      <ion-item *ngFor="let charla of charlas" (click)="verCharla(charla.id)">
+        <ion-label>
+          <h2>{{ charla.fecha | date }}</h2>
+          <p>{{ charla.establecimiento }}</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+  
