--- a/ProyectoSeremi/src/app/app.component.html
+++ b/ProyectoSeremi/src/app/app.component.html
@@ -1,1 +1,13 @@
-<ion-router-outlet></ion-router-outlet>
+<div class="app-layout">
+    <app-header></app-header>
+  
+    <div class="content-layout">
+      <app-side-bar class="left-sidebar"></app-side-bar>
+  
+      <div class="main-content">
+        <ion-router-outlet></ion-router-outlet>
+      </div>
+  
+      <app-side-bar class="right-sidebar"></app-side-bar>
+    </div>
+  </div>
