--- a/ProyectoSeremi/src/app/components/side-bar/side-bar.component.html
+++ b/ProyectoSeremi/src/app/components/side-bar/side-bar.component.html
@@ -1,3 +1,4 @@
 <div class="sidebar">
-  <img src="assets/images/sidebar-image.png" alt="Sidebar" />
+  <img src="assets/BARRA.png" alt="Sidebar" />
 </div>
+
