--- a/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
+++ b/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
@@ -1,13 +1,20 @@
 .sidebar {
     width: 80px;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    z-index: 100;
-  }
+    height: 100%;
+    width: 100%;
+    background-color: #f2f2f2;
   
-  @media (max-width: 768px) {
-    .sidebar {
+    display: block;
+    margin: 0;
+    padding: 0;
+  
+    img {
+      height: 100%;
+      width: 100%;
+    }
+  
+    @media (max-width: 768px) {
       display: none;
     }
   }
+  
