--- a/ProyectoSeremi/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/ProyectoSeremi/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -1,36 +1,29 @@
-<ion-content [fullscreen]="true">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Iniciar Sesión</ion-title>
-      </ion-toolbar>
-    </ion-header>
-  
-    <form [formGroup]="formularioInicio" (ngSubmit)="iniciarSesion()">
-      <ion-list>
-        <ion-item>
-          <ion-label position="floating">Correo electrónico</ion-label>
-          <ion-input formControlName="correo" type="email"></ion-input>
-        </ion-item>
-  
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input formControlName="contraseña" type="password"></ion-input>
-        </ion-item>
-      </ion-list>
-  
-      <div class="ion-padding">
-        <ion-button expand="block" type="submit" [disabled]="formularioInicio.invalid">
-          Iniciar Sesión
-        </ion-button>
-  
-        <ion-button expand="block" fill="clear" (click)="irARegistro()">
-          ¿No tienes cuenta? Regístrate
-        </ion-button>
-  
-        <ion-button expand="block" fill="clear" (click)="irARecuperarContrasena()">
-          ¿Olvidaste tu contraseña?
-        </ion-button>
-      </div>
-    </form>
-  </ion-content>
-  
+<div class="login-wrapper">
+  <h2>Iniciar Sesión</h2>
+
+  <ion-list>
+    <ion-item>
+      <ion-label position="floating">Correo electrónico</ion-label>
+      <ion-input formControlName="correo" type="email"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input formControlName="contraseña" type="password"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <div class="ion-padding">
+    <ion-button expand="block" type="submit" [disabled]="formularioInicio.invalid">
+      Iniciar Sesión
+    </ion-button>
+
+    <ion-button expand="block" fill="clear" (click)="irARegistro()">
+      ¿No tienes cuenta? Regístrate
+    </ion-button>
+
+    <ion-button expand="block" fill="clear" (click)="irARecuperarContrasena()">
+      ¿Olvidaste tu contraseña?
+    </ion-button>
+  </div>
+</div>
