Inicio de Header
Se comienza a implementar el Header

--- a/ProyectoSeremi/src/app/components/header/header.component.html
+++ b/ProyectoSeremi/src/app/components/header/header.component.html
@@ -1,3 +1,12 @@
 <ion-header>
-    <ion-title>{{title}}</ion-title>
-</ion-header>
+    <ion-toolbar class="custom-header">
+      <div class="header-content">
+        <ion-icon name="home" class="home-icon"></ion-icon>
+        <div class="user-info">
+          <ion-icon name="person-circle" class="user-icon"></ion-icon>
+          <span>Hola, Nombre Apellido</span>
+        </div>
+      </div>
+    </ion-toolbar>
+  </ion-header>
+  
