--- a/ProyectoSeremi/src/app/pages/inicio-sesion/inicio-sesion.page.html
+++ b/ProyectoSeremi/src/app/pages/inicio-sesion/inicio-sesion.page.html
@@ -4,17 +4,17 @@
   <ion-list>
     <ion-item>
       <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input formControlName="correo" type="email"></ion-input>
+      <ion-input placeholder="Ingrese Correo"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
-      <ion-input formControlName="contraseña" type="password"></ion-input>
+      <ion-input placeholder="Ingrese Contraseña" type="password"></ion-input>
     </ion-item>
   </ion-list>
 
   <div class="ion-padding">
-    <ion-button expand="block" type="submit" [disabled]="formularioInicio.invalid">
+    <ion-button expand="block" (click)="irAPrincipal()">
       Iniciar Sesión
     </ion-button>
 
