--- a/ProyectoSeremi/src/app/pages/registro/registro.page.html
+++ b/ProyectoSeremi/src/app/pages/registro/registro.page.html
@@ -1,46 +1,49 @@
-<ion-content [fullscreen]="true">
-    <ion-header>
-        <ion-toolbar>
-          <ion-title>Registro</ion-title>
-        </ion-toolbar>
-    </ion-header>
+<ion-content [fullscreen]="false">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Registro</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-    <ion-list>
-      <ion-item>
-        <ion-label position="floating">RUT</ion-label>
-        <ion-input formControlName="rut" type="text"></ion-input>
-      </ion-item>
+  <ion-list>
+    <ion-item>
+      <ion-label position="floating">RUT</ion-label>
+      <ion-input placeholder="Ingrese RUT"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Correo electrónico</ion-label>
-        <ion-input formControlName="correo" type="email"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Correo electrónico</ion-label>
+      <ion-input placeholder="Ingrese Correo" type="email"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Contraseña</ion-label>
-        <ion-input formControlName="contraseña" type="password"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input placeholder="Ingrese Contraseña" type="password"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Región</ion-label>
-        <ion-input formControlName="region" type="text"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Región</ion-label>
+      <ion-input placeholder="Ingrese Región"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Comuna</ion-label>
-        <ion-input formControlName="comuna" type="text"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Comuna</ion-label>
+      <ion-input placeholder="Ingrese Comuna"></ion-input>
+    </ion-item>
 
-      <ion-item>
-        <ion-label position="floating">Dirección</ion-label>
-        <ion-input formControlName="direccion" type="text"></ion-input>
-      </ion-item>
+    <ion-item>
+      <ion-label position="floating">Dirección</ion-label>
+      <ion-input placeholder="Ingrese Dirección"></ion-input>
+    </ion-item>
   </ion-list>
 
   <div class="ion-padding">
-  <ion-button expand="block" type="submit" [disabled]="formularioRegistro.invalid">
+    <ion-button expand="block" (click)="irAInicioSesion()">
       Registrarse
-  </ion-button>
-  </div>
+    </ion-button>
 
+    <ion-button expand="block" fill="clear" (click)="irAInicioSesion()">
+      ¿Ya tienes cuenta? Inicia sesión
+    </ion-button>
+  </div>
 </ion-content>
