--- a/ProyectoSeremi/src/app/pages/restablecer-contra/restablecer-contra.page.html
+++ b/ProyectoSeremi/src/app/pages/restablecer-contra/restablecer-contra.page.html
@@ -1,7 +1,12 @@
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">restablecerContra</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<div class="reset-container">
+  <h1>Restablecer Contraseña</h1>
+
+  <form>
+    <label for="email">Correo electrónico</label>
+    <input type="email" id="email" name="email" required />
+
+    <button type="submit">Enviar instrucciones</button>
+  </form>
+
+  <a href="/inicio-sesion">Volver a iniciar sesión</a>
+</div>
