--- a/ProyectoSeremi/src/app/pages/perfil/perfil.page.html
+++ b/ProyectoSeremi/src/app/pages/perfil/perfil.page.html
@@ -1,13 +1,64 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>perfil</ion-title>
+    <ion-title>
+      <img src="assets/banner-superior.png" style="width: 100%; height: auto;" />
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">perfil</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="perfil-background">
+
+  <!-- Botón flotante a la izquierda inferior -->
+  <ion-button class="boton-volver" fill="solid" routerLink="/menu">
+    Volver a Menú
+  </ion-button>
+
+  <div class="perfil-container">
+
+    <div class="perfil-header">
+      <ion-icon name="person-circle-outline" class="perfil-icon"></ion-icon>
+      <h1>Nombre Apellido</h1>
+    </div>
+
+    <div class="formulario">
+      <div class="form-col">
+        <ion-item>
+          <ion-label position="stacked">RUT</ion-label>
+          <ion-input placeholder="RUT"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Región</ion-label>
+          <ion-input placeholder="Región"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Comuna</ion-label>
+          <ion-input placeholder="Comuna"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Dirección</ion-label>
+          <ion-input placeholder="Dirección"></ion-input>
+        </ion-item>
+      </div>
+
+      <div class="form-col">
+        <ion-item>
+          <ion-label position="stacked">Correo electrónico</ion-label>
+          <ion-input type="email" placeholder="example@correo.com"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Contraseña</ion-label>
+          <ion-input type="password" placeholder="********"></ion-input>
+        </ion-item>
+      </div>
+    </div>
+
+    <div class="boton-editar">
+      <ion-button expand="block" color="primary">Editar Perfil</ion-button>
+    </div>
+
+  </div>
 </ion-content>
