--- a/ProyectoSeremi/src/app/app.component.scss
+++ b/ProyectoSeremi/src/app/app.component.scss
@@ -1,21 +1,18 @@
 .app-layout {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
+  display: flex;
+  flex-direction: column;
+
+
   .content-layout {
     display: flex;
     flex: 1;
+    height: 100%;
+
+
+    .main-content {
+      flex: 1;
+      padding: 16px;
+      background-color: #fff;
+    }
   }
-  
-  .left-sidebar,
-  .right-sidebar {
-    width: 100px; // o el ancho que necesites
-    background-color: #f0f0f0;
-  }
-  
-  .main-content {
-    flex: 1;
-    overflow-y: auto;
-  }
+}
