--- a/ProyectoSeremi/src/app/pages/principal/principal.page.html
+++ b/ProyectoSeremi/src/app/pages/principal/principal.page.html
@@ -26,6 +26,15 @@
           <ion-item>Charla 3</ion-item>
         </ion-list>
     </div>
+
+    <div class="floating-button">
+      <ion-button color="primary">
+        Botón flotante
+      </ion-button>
+    </div>
+    
+
+
 </ion-content>
 
   
