--- a/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
+++ b/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
@@ -1,13 +1,14 @@
 .sidebar {
-    width: 80px;
+    width: 11vw;
     height: 100%;
-    width: 100%;
     background-color: #f2f2f2;
   
-    display: block;
-    margin: 0;
-    padding: 0;
-  
+    //display: block;
+    //margin: 0;
+    //padding: 0;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
     img {
       height: 100%;
       width: 100%;
@@ -17,4 +18,3 @@
       display: none;
     }
   }
-  
