--- a/ProyectoSeremi/src/app/pages/principal/principal.page.scss
+++ b/ProyectoSeremi/src/app/pages/principal/principal.page.scss
@@ -2,7 +2,8 @@ ion-content {
     display: flex;
     justify-content: center;  
     align-items: center;    
-    height: 100%;            
+    height: 100%;  
+      
   }
   
   .contenedor-botones {
@@ -71,6 +72,15 @@ ion-content {
   .lista-izquierda ion-list {
     margin: 0;
     padding: 0;
+  }
+  
+  .floating-button {
+    position: absolute;
+    top: 300px;
+    left: 150px; // o donde quieras posicionarlo
+    z-index: 1000; // más alto que el z-index del sidebar
+    //overflow-y: visible;   
+    --overflow: visible;     
   }
   
   
