Cambios en páginas varias
Se dio estructura a varias páginas y se añadió una nueva página llamada actividad-especifica.

--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
@@ -1,3 +1,19 @@
-<ion-content [fullscreen]="true">
+<ion-content>
 
-</ion-content>
+    <div class="actividades-container">
+      
+      <h1>Actividades</h1>
+  
+      <div class="lista-actividades">
+        <button class="actividad-btn" (click)="goToActividad()">Actividad Fumar te da Cancer</button>
+        <button class="actividad-btn">Actividad El Vaper y sus efectos a largo plazo</button>
+        <button class="actividad-btn">Actividad Tabaco y sus consecuencias</button>
+        <button class="actividad-btn">Actividad Componentes del cigarro</button>
+      </div>
+  
+      <button class="volver-btn">Volver al menú</button>
+      <button class="crear-actividad-btn">Crear Actividad Nueva</button>
+      
+    </div>
+  
+  </ion-content>
