--- a/ProyectoSeremi/src/app/components/header/header.component.scss
+++ b/ProyectoSeremi/src/app/components/header/header.component.scss
@@ -7,7 +7,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: flex-end; /* Alinea el user-info a la derecha */
+    justify-content: flex-end;
     width: 100%;
     height: 56px;
   }
@@ -18,33 +18,30 @@
     height: 54px;
     width: auto;
   }
-  
-  /* Botón Home centrado */
+
   .home-button {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%); /* Centra el icono horizontalmente */
+    transform: translateX(-50%); 
     padding: 0;
-    background: transparent; /* Fondo transparente */
+    background: transparent;
     border: none;
   }
   
   .home-icon {
-    font-size: 24px; /* Tamaño del icono de Home */
+    font-size: 24px; 
     color: black;
   }
   
-  /* Estilos para la sección de usuario */
-/* Estilos para la sección de usuario */
 .user-info {
   display: flex;
   align-items: center;
   background-color: white;
-  padding: 1vh 2vw; /* El padding se ajusta en función del tamaño de la pantalla */
+  padding: 1vh 2vw; 
   border-radius: 20px;
-  font-size: 3vw; /* El tamaño de la fuente se adapta al 3% del ancho de la pantalla */
-  width: 30vw; /* Ajusta el fondo al 30% del ancho de la pantalla */
-  max-width: 400px; /* Limita el fondo a un tamaño máximo */
+  font-size: 3vw; 
+  width: 30vw; 
+  max-width: 400px; 
 }
 
 .user-button {
@@ -56,11 +53,11 @@
 }
 
 .user-icon {
-  font-size: 4.5vw; /* El tamaño del icono se adapta al ancho de la pantalla */
+  font-size: 4.5vw; 
   color: black;
-  margin-right: 1vw; /* Espaciado entre el icono y el texto */
+  margin-right: 1vw; 
 }
 
 .user-info span {
-  font-size: 1.2vw; /* Ajusta el tamaño del texto */
+  font-size: 1.2vw; 
 }
