--- a/ProyectoSeremi/src/app/pages/perfil/perfil.page.scss
+++ b/ProyectoSeremi/src/app/pages/perfil/perfil.page.scss
@@ -1,53 +1,58 @@
-   .perfil-container {
-    padding: 20px;
-    max-width: 900px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .perfil-header {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .perfil-icon {
-    font-size: 60px;
-    color: #000;
-  }
-  
-  .formulario {
-    display: flex;
-    gap: 40px;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
-  .form-col {
-    flex: 1 1 300px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .boton-editar {
-    width: 100%;
-    max-width: 300px;
-    margin-bottom: 20px;
-  }
-  
-  /* Botón volver fijo a la esquina inferior izquierda */
-  .boton-volver {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    z-index: 1000;
-    background-color: #1d1b3a;
-    color: white;
-    font-weight: bold;
-    border-radius: 10px;
-  }
-  
+.perfil-container {
+  padding: 20px;
+  max-width: 900px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.perfil-header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.perfil-icon {
+  font-size: 60px;
+  color: #000;
+}
+
+.formulario {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.form-col {
+  flex: 1 1 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.texto-valor {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  font-size: 16px;
+  color: #333;
+}
+
+.boton-editar {
+  width: 100%;
+  max-width: 300px;
+  margin-bottom: 20px;
+}
+
+.boton-volver {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  z-index: 1000;
+  background-color: #1d1b3a;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+}
