Corrección de errores
Se corrigen algunos errores que existían en la versión anterior del código.

--- a/ProyectoSeremi/src/app/pages/principal/principal.page.scss
+++ b/ProyectoSeremi/src/app/pages/principal/principal.page.scss
@@ -72,5 +72,14 @@ ion-content {
     margin: 0;
     padding: 0;
   }
+
+  .floating-button {
+    position: absolute;
+    top: 300px;
+    left: 150px; // o donde quieras posicionarlo
+    z-index: 1000; // más alto que el z-index del sidebar
+    //overflow-y: visible;
+    --overflow: visible;
+  }
   
   
