--- a/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
+++ b/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
@@ -1,20 +1,20 @@
 .sidebar {
-    width: 80px;
+  width: 11vw;
+  height: 100%;
+  background-color: #f2f2f2;
+
+  //display: block;
+  //margin: 0;
+  //padding: 0;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  img {
     height: 100%;
     width: 100%;
-    background-color: #f2f2f2;
-  
-    display: block;
-    margin: 0;
-    padding: 0;
-  
-    img {
-      height: 100%;
-      width: 100%;
-    }
-  
-    @media (max-width: 768px) {
-      display: none;
-    }
   }
-  
+
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
