--- a/ProyectoSeremi/src/app/app.component.html
+++ b/ProyectoSeremi/src/app/app.component.html
@@ -2,10 +2,10 @@
     <app-header *ngIf="showHeader"></app-header>
 
     <div class="content-layout">
-        <app-side-bar></app-side-bar>
+        <!-- <app-side-bar></app-side-bar>-->
         <div class="main-content">
             <ion-router-outlet></ion-router-outlet>
         </div>
-        <app-side-bar></app-side-bar>
+        <!-- <app-side-bar></app-side-bar>-->
     </div>
 </div>
