--- a/ProyectoSeremi/src/app/app.component.scss
+++ b/ProyectoSeremi/src/app/app.component.scss
@@ -2,17 +2,22 @@
   display: flex;
   flex-direction: column;
 
-
   .content-layout {
     display: flex;
     flex: 1;
     height: 100%;
+    
+    .left-bar, .right-bar{
+      z-index: 1;
+      position: relative;
+    }
 
 
     .main-content {
       flex: 1;
       padding: 16px;
       background-color: #fff;
+      overflow: visible;
     }
   }
 }
