--- a/ProyectoSeremi/src/app/components/side-bar/side-bar.component.html
+++ b/ProyectoSeremi/src/app/components/side-bar/side-bar.component.html
@@ -1,4 +1,6 @@
+
 <div class="sidebar">
-  <img src="assets/BARRA.png" alt="Sidebar" />
+  <!--<img src="assets/BARRA.png" alt="Sidebar" />-->
 </div>
+
 
