--- a/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
+++ b/ProyectoSeremi/src/app/components/side-bar/side-bar.component.scss
@@ -1,20 +1,29 @@
 .sidebar {
-    width: 11vw;
+   
+  background-color: red;
+  width: 11vw;
+  height: 100%;
+  position: relative;
+  z-index: 0;
+  
+  
+  
+  
+  /* width: 11vw;
     height: 100%;
     background-color: #f2f2f2;
   
-    //display: block;
-    //margin: 0;
-    //padding: 0;
+
     position: relative;
+
     z-index: 1;
-    overflow: hidden;
     img {
       height: 100%;
       width: 100%;
+      
     }
   
     @media (max-width: 768px) {
       display: none;
-    }
+    }*/
   }
