--- a/ProyectoSeremi/src/app/pages/principal/principal.page.scss
+++ b/ProyectoSeremi/src/app/pages/principal/principal.page.scss
@@ -1,9 +1,9 @@
-ion-content {
+ion-content.principal-content {
     display: flex;
     justify-content: center;  
     align-items: center;    
     height: 100%;  
-      
+    --overflow: visible;
   }
   
   .contenedor-botones {
@@ -79,17 +79,11 @@ ion-content {
     top: 300px;
     left: 150px; // o donde quieras posicionarlo
     z-index: 1000; // más alto que el z-index del sidebar
-    //overflow-y: visible;
-    --overflow: visible;
+    //pointer-events: auto;
   }
   
-  .floating-button {
-    position: absolute;
+  .fab-prueba {
+    z-index: 9999 !important;
+    left: 200px;
     top: 300px;
-    left: 150px; // o donde quieras posicionarlo
-    z-index: 1000; // más alto que el z-index del sidebar
-    //overflow-y: visible;   
-    --overflow: visible;     
   }
-  
-  
