Creacion de crear actividad

--- a/ProyectoSeremi/src/app/app.component.html
+++ b/ProyectoSeremi/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-layout">
-    <app-header *ngIf="showHeader"></app-header>
+    <ion-header><app-header *ngIf="showHeader"></app-header></ion-header>
+    
 
     <div class="content-layout">
         <!-- <app-side-bar></app-side-bar>-->
