--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
@@ -12,7 +12,7 @@
       </div>
   
       <button class="volver-btn">Volver al menú</button>
-      <button class="crear-actividad-btn">Crear Actividad Nueva</button>
+      <button class="crear-actividad-btn" (click) = "irACrearActividad()">Crear Actividad Nueva</button>
       
     </div>
   
