--- a/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.scss
+++ b/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.scss
@@ -7,7 +7,8 @@
   }
   
   .actividad-box {
-    background-color: white;
+    color: black;
+    background-color: rgb(255, 255, 255);
     border: 1px solid #7879f1;
     border-radius: 8px;
     padding: 1.5rem;
