Elementos de charla
Se añaden botones laterales a charla-específica, entre ellos el contador de tiempo.

--- a/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
+++ b/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
@@ -11,7 +11,7 @@
         <button class="charla-btn">22/5 - Charla con Colegio monjas del monte</button>
       </div>
   
-      <button class="volver-btn">Volver al menú</button>
+      <button class="volver-btn" (click)="goToMenu()">Volver al menú</button>
       <button class="crear-charla-btn">Crear Charla Nueva</button>
       
     </div>
