--- a/ProyectoSeremi/src/app/pages/charla-especifica/charla-especifica.page.html
+++ b/ProyectoSeremi/src/app/pages/charla-especifica/charla-especifica.page.html
@@ -5,9 +5,59 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
+  <button class="volver-btn" (click)="goToCharlas()">Volver a charlas</button>
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">charlaEspecifica</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-grid>
+    <!-- Aseguramos que el ion-row ocupe todo el espacio disponible y se alinee a la derecha -->
+    <ion-row style="width: 100%; height: 100%;" class="ion-justify-content-end">
+      <ion-col size="auto" class="ion-text-right" style="display: flex; flex-direction: column; align-items: flex-end;">
+
+        <!-- Botón "Iniciar contador" -->
+        <ion-button
+          class="boton-ancho"
+          [disabled]="botonDeshabilitado"
+          (click)="toggleContador()"
+          color="primary">
+          {{ botonIniciado ? 'Detener (' + tiempoTranscurrido + ')' : 'Iniciar contador' }}
+        </ion-button>
+
+        <!-- Botón "Ver actividades" -->
+        <ion-button
+          class="boton-ancho"
+          color="primary">
+          Ver actividades
+        </ion-button>
+
+        <!-- Botón "Ver presentaciones" -->
+        <ion-button
+          class="boton-ancho"
+          color="primary">
+          Ver presentaciones
+        </ion-button>
+
+        <!-- Botón "Pasar asistencia" -->
+        <ion-button
+          class="boton-ancho"
+          color="primary">
+          Pasar asistencia
+        </ion-button>
+
+        <!-- Botón "Editar charla" -->
+        <ion-button
+          class="boton-ancho"
+          color="primary">
+          Editar charla
+        </ion-button>
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
