Diseño de creación de una charla
Se hizo el diseño de la creación de una charla.

--- a/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
+++ b/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
@@ -1,20 +1,13 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      <img src="assets/banner-superior.png" style="width: 100%; height: auto;" />
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
+<ion-content class="principal">
   <div class="actividad-container">
     <div class="actividad-box">
       <strong>ACTIVIDAD: Fumar te da cancer</strong>
     </div>
 
     <div class="botones-superiores">
-      <button class="boton-accion">Iniciar Actividad</button>
-      <button class="boton-accion">Editar Actividad</button>
+      <button class="boton-accion" (click)="irAActividadIniciada()">Iniciar Actividad</button>
+      <button class="boton-accion" (click)="irAeditandoActividad()">Editar Actividad</button>
     </div>
 
     <button class="eliminar-btn">Eliminar Actividad</button>
