--- a/ProyectoSeremi/src/app/pages/crear-actividad/crear-actividad.page.html
+++ b/ProyectoSeremi/src/app/pages/crear-actividad/crear-actividad.page.html
@@ -5,7 +5,7 @@
       <input class="input-actividad" type="number" placeholder="*Cantidad de Preguntas" />
     </div>
 
-    <button class="crear-btn">Comenzar Creación</button>
+    <button class="crear-btn" (click)="irACreandoActividad()">Comenzar Creación</button>
     <button class="volver-btn">Volver a actividades</button>
   </div>
 </ion-content>
