--- a/ProyectoSeremi/src/app/app.component.html
+++ b/ProyectoSeremi/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-layout">
-    <ion-header><app-header *ngIf="showHeader"></app-header></ion-header>
+    <app-header *ngIf="showHeader"></app-header>
     
 
     <div class="content-layout">
