--- a/ProyectoSeremi/src/app/pages/crear-actividad/crear-actividad.page.scss
+++ b/ProyectoSeremi/src/app/pages/crear-actividad/crear-actividad.page.scss
@@ -1,6 +1,6 @@
 .diseño-general {
-    padding-top: 56px; /* Espacio suficiente para el header */
-    top:70px;
+    //padding-top: 56px; /* Espacio suficiente para el header */
+    top:90px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -9,7 +9,7 @@
   }
   
   .input-actividad {
-    padding-top: 56px;
+    //padding-top: 56px;
     width: 100%;
     padding: 1rem;
     margin-bottom: 1rem;
