--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
@@ -11,7 +11,7 @@
         <button class="actividad-btn">Actividad Componentes del cigarro</button>
       </div>
   
-      <button class="volver-btn">Volver al menú</button>
+      <button class="volver-btn" (click)="goToPrincipal()">Volver al menú</button>
       <button class="crear-actividad-btn" (click) = "irACrearActividad()">Crear Actividad Nueva</button>
       
     </div>
