--- a/ProyectoSeremi/src/app/pages/creando-actividad/creando-actividad.page.html
+++ b/ProyectoSeremi/src/app/pages/creando-actividad/creando-actividad.page.html
@@ -14,7 +14,7 @@
     <!-- Alternativas en 2×2 -->
     <ion-grid class="mi-grid-centro">
       <ion-row class="justificar-centro">
-        <ion-col size="6">
+        <ion-col size="12" sizeMd="6">
           <div class="alternativa-item">
             <div class="selector-correcta"
                 [class.activa]="alternativas[0].esCorrecta"
@@ -24,7 +24,7 @@
                   placeholder="*Alternativa 1" />
           </div>
         </ion-col>
-        <ion-col size="6">
+        <ion-col size="12" sizeMd="6">
           <div class="alternativa-item">
             <div class="selector-correcta"
                 [class.activa]="alternativas[1].esCorrecta"
@@ -36,7 +36,7 @@
         </ion-col>
       </ion-row>
       <ion-row class="justificar-centro">
-        <ion-col size="6">
+        <ion-col size="12" sizeMd="6">
           <div class="alternativa-item">
             <div class="selector-correcta"
                 [class.activa]="alternativas[2].esCorrecta"
@@ -46,7 +46,7 @@
                   placeholder="*Alternativa 3" />
           </div>
         </ion-col>
-        <ion-col size="6">
+        <ion-col size="12" sizeMd="6">
           <div class="alternativa-item">
             <div class="selector-correcta"
                 [class.activa]="alternativas[3].esCorrecta"
