--- a/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
+++ b/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.html
@@ -1,19 +1,25 @@
 
 <ion-content class="principal">
-  <div class="actividad-container">
-    <div class="actividad-box">
-      <strong>ACTIVIDAD: Fumar te da cancer</strong>
+  
+  <div *ngIf="completado">
+    <div class="actividad-container">
+      <div class="actividad-box">
+        <strong>ACTIVIDAD: Fumar te da cancer</strong>
+      </div>
+
+      <div class="botones-superiores">
+        <button class="boton-accion" (click)="irAActividadIniciada()">Iniciar Actividad</button>
+        <button class="boton-accion" (click)="irAeditandoActividad()">Editar Actividad</button>
+      </div>
+
+      <button class="eliminar-btn" (click)="apretarEliminar()">Eliminar Actividad</button>
+      
+
     </div>
-
-    <div class="botones-superiores">
-      <button class="boton-accion" (click)="irAActividadIniciada()">Iniciar Actividad</button>
-      <button class="boton-accion" (click)="irAeditandoActividad()">Editar Actividad</button>
-    </div>
-
-    <button class="eliminar-btn">Eliminar Actividad</button>
-    <button class="volver-btn">Volver a actividades</button>
-
   </div>
-
+  <button class="volver-btn" (click)="irAActividades()">Volver a actividades</button>
+  <div *ngIf= "completado === false" class="exitosa" >
+    <p>Actividad eliminada de manera exitosa.</p>
+  </div>
 </ion-content>
 
