--- a/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.scss
+++ b/ProyectoSeremi/src/app/pages/actividad-especifica/actividad-especifica.page.scss
@@ -73,3 +73,20 @@
     z-index: 10;
   }
   
+
+  .exitosa {
+    width: 90%;
+    max-width: 400px;
+    margin: 2rem auto;            /* centrar */
+    padding: 1.5rem;
+    background-color: #ffffff;    /* fondo verde claro */
+    border: 2px solid #51548e;    /* borde verde */
+    border-radius: 8px;
+    text-align: center;
+  
+    p {
+      margin: 0;
+      font-size: 1.1rem;
+      color: #000000;             /* texto verde oscuro */
+    }
+  }
