--- a/ProyectoSeremi/src/app/pages/crear-actividad/crear-actividad.page.html
+++ b/ProyectoSeremi/src/app/pages/crear-actividad/crear-actividad.page.html
@@ -6,6 +6,6 @@
     </div>
 
     <button class="crear-btn" (click)="irACreandoActividad()">Comenzar Creación</button>
-    <button class="volver-btn">Volver a actividades</button>
+    <button class="volver-btn" (click)="irAActividades()">Volver a actividades</button>
   </div>
 </ion-content>
