--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.scss
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.scss
@@ -1,73 +1,73 @@
 .actividades-container {
-    position: relative;
-    padding: 1rem;
-    max-width: 900px;
-    margin: 0 auto;
-  }
+  position: relative;
+  padding: 1rem;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.lista-actividades {
+  display: flex;
+  flex-direction: column;
+  gap: 10%;
+  background-color: #f4f4f4;
+  padding: 5%;
+  border-radius: 8px;
   
-  h1 {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
-  .lista-actividades {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: #f4f4f4;
-    padding: 1rem;
-    border-radius: 8px;
-  }
-  
-  .actividad-btn {
-    background-color: #d9d9d9;
-    border: none;
-    padding: 1rem;
-    font-size: 1rem;
-    text-align: left;
-    border-radius: 6px;
-    width: 100%;
-    cursor: pointer;
-  }
-  
-  .actividad-btn:hover {
-    background-color: #cfcfcf;
-  }
-  
-  .volver-btn {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    background-color: #2e2b3d;
-    color: white;
-    padding: 0.6rem 1.2rem;
-    border: none;
-    border-radius: 20px;
-    font-size: 0.95rem;
-    cursor: pointer;
-    z-index: 10;
-  }
-  
+}
+
+.actividad-btn {
+  --background: #d9d9d9;
+  --color: black;
+  text-align: left;
+  white-space: normal;
+  border-radius: 6px;
+  font-size: 100%;
+  padding: 2%;
+  text-transform: none;
+  font-family: 'Roboto', sans-serif;
+}
+
+// Botones inferiores
+.volver-btn,
+.crear-actividad-btn {
+  position: fixed;
+  bottom: 20px;
+  z-index: 10;
+  white-space: nowrap;
+  font-size: 0.95rem;
+  padding: 0.5rem 1rem;
+  max-width: 45%;
+  width: auto;
+  text-transform: none;
+}
+
+.volver-btn {
+  left: 10px;
+  --background: #2e2b3d;
+  --color: white;
+}
+
+.crear-actividad-btn {
+  right: 10px;
+  --background: #7879f1;
+  --color: white;
+  white-space: normal;
+  text-align: center;
+  height: 10%;
+
+}
+
+@media (max-width: 500px) {
+  F
   .crear-actividad-btn {
-    position: fixed;
-    top: 40%;
-    right: 20px;
-    background-color: #7879f1;
-    color: white;
-    padding: 1rem;
-    font-size: 1rem;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    z-index: 10;
+    font-size: 0.8rem;
+    padding: 0.4rem 0.6rem;
+    max-width: 45%;
   }
-  
-  @media (max-width: 768px) {
-    .crear-actividad-btn {
-      top: auto;
-      bottom: 90px;
-      right: 20px;
-    }
-  }
-  
+}
